resources/dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ca-lacave-issuer
spec:
  tls:
  - hosts:
    - dashboard.kube.lacave
    secretName: login-kube-lacave-tls
  rules:
  - host: dashboard.kube.lacave
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
